--- a/overlay/OPlusSystemUIResTarget/res/values/dimens.xml
+++ b/overlay/OPlusSystemUIResTarget/res/values/dimens.xml
@@ -26,4 +26,14 @@
     <!-- Location on the screen of the center of the physical power button. -->
     <dimen name="physical_power_button_center_screen_location_y">1200px</dimen>
 
+    <!-- Alert Slider UI for OnePlus 8 Pro -->
+    <dimen name="tri_state_down_dialog_position">710px</dimen>
+    <dimen name="tri_state_down_dialog_position_l">635px</dimen>
+    <dimen name="tri_state_middle_dialog_position">585px</dimen>
+    <dimen name="tri_state_middle_dialog_position_l">635px</dimen>
+    <dimen name="tri_state_up_dialog_position">460px</dimen>
+    <dimen name="tri_state_up_dialog_position_l">635px</dimen>
+    <dimen name="tri_state_up_dialog_position_deep">32px</dimen>
+    <dimen name="tri_state_up_dialog_position_deep_land">28px</dimen>
+    
 </resources>
